RESOLVED FIXED277489
AX: lineTextMarkerRangeForTextMarker returns too much text for some blank lines
https://bugs.webkit.org/show_bug.cgi?id=277489
Summary AX: lineTextMarkerRangeForTextMarker returns too much text for some blank lines
Dominic Mazzoni
Reported 2024-08-01 08:47:04 PDT
In https://bugs.webkit.org/show_bug.cgi?id=275870 (AX: lineTextMarkerRangeForTextMarker fails on first character of line in Google Docs) we fixed an issue where lineTextMarkerRangeForTextMarker failed to return a range at all. This fix resulted in a regression where now it returns a range that's too large, for some blank lines. One symptom was that when using VoiceOver to arrow through editable text, landing on a blank line would sometimes read the subsequent line rather than just "newline". rdar://131390008
Attachments
Radar WebKit Bug Importer
Comment 1 2024-08-01 08:47:14 PDT
Dominic Mazzoni
Comment 2 2024-08-01 08:56:25 PDT
EWS
Comment 3 2024-08-01 13:38:35 PDT
Committed 281724@main (ca993564405e): <https://commits.webkit.org/281724@main> Reviewed commits have been landed. Closing PR #31601 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.