AX: lineTextMarkerRangeForTextMarker returns too much text for some blank lines https://bugs.webkit.org/show_bug.cgi?id=277489 rdar://132989539

Reviewed by Chris Fleizach.

In https://bugs.webkit.org/show_bug.cgi?id=275870 (AX:
lineTextMarkerRangeForTextMarker fails on first character of line in
Google Docs) we fixed an issue where lineTextMarkerRangeForTextMarker
failed to return a range at all.

This fix resulted in a regression where now it returns a range that's
too large, for some blank lines. One symptom was that when using
VoiceOver to arrow through editable text, landing on a blank line
would sometimes read the subsequent line rather than just "newline".

* LayoutTests/accessibility/mac/line-text-marker-range-for-text-marker-expected.txt:
* LayoutTests/accessibility/mac/line-text-marker-range-for-text-marker.html:
* Source/WebCore/accessibility/AccessibilityObject.cpp:
(WebCore::AccessibilityObject::lineRangeForPosition const):

Canonical link: https://commits.webkit.org/281724@main